# ibazel-no-workspace-file

./: BUILD  MODULE.bazel  README.md
hello/: BUILD.bazel  go.mod
